--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
       <script type="text/javascript" src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
 
-      <script type="text/javascript" src="dist/security-embedded.min.js"></script>
+      <script type="text/javascript" src="bower_components/gumga-security-embedded/dist/security-embedded.min.js"></script>
 
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
