--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<!DOCTYPE html>
-<html ng-app="app" >
-  <head>
-      <title>Security Embedded</title>
-      <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
-      <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
-      <meta charset="UTF-8">
-      <meta http-equiv="content-language" content="pt-br">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-      <base href="/"/>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://gumga.github.io/layout/gumga-layout/gumga-layout.min.css">
-  </head>
-  <body cz-shortcut-listen="true" ng-controller="ctrl">
-      <br/>
+<html ng-app="app">
+<head>
+    <title>Security Embedded</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://gumga.github.io/layout/gumga-layout/gumga-layout.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
+</head>
+<body cz-shortcut-listen="true" ng-controller="ctrl">
+    <br/>
 
-      <div class="container">
+    <div class="container">
         <security-embedded configuration="config"></security-embedded>
-      </div>
+    </div>
 
-      <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
-      <script type="text/javascript" src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
 
-      <script type="text/javascript" src="security-embedded.js"></script>
+    <script type="text/javascript" src="security-embedded.js"></script>
 
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
-      <script src="https://gumga.github.io/layout/gumga-layout/gumga-layout.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+    <script src="https://gumga.github.io/layout/gumga-layout/gumga-layout.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 
-      <script type="text/javascript" src="assets/js/app.js"></script>
-
-  </body>
+    <script type="text/javascript" src="assets/js/app.js"></script>
+</body>
 </html>
